<resources>
    <string name="app_name">LetsQueeze</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="invalid_password2">Passwords do not match</string>
    <string name="register_failed">"Register failed"</string>
    <string name="label_theme">Theme</string>
    <string name="label_difficulty">Difficulty</string>
    <string name="label_num_questions"># Questions</string>
    <string name="label_category">Category</string>
    <string name="action_save">Save</string>
    <string name="blank_num_question">Number of questions cannot be blank</string>
    <string name="invalid_num_question">Number of questions must be in [1, 50].</string>
    <string name="label_username">Username</string>
    <string name="label_display_name">Display name</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_display_name">Display name should not be empty</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login_prompt">You need to login first :)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navitem_login">Login</string>
    <string name="navitem_register">Register</string>
    <string name="navitem_settings">Settings</string>
    <string name="navitem_scoreboard">Scoreboard</string>
    <string name="navitem_profile">Profile</string>
    <string name="navitem_logout">Logout</string>
    <string name="queeze_finished_your_score">Queeze Finished! Your Score:</string>
    <string name="not_specified">Not Specified</string>
</resources>